2005-01-14  Jim Huang  <jserv@kaffe.org>

	* include/jvmpi.h:
	Add missing JVMPI version numbers.

	* kaffe/jvmpi/jvmpi_kaffe.c
	(jvmpiFillObjectAlloc):
	Use KGC_getObjectSize instead of GC_getObjectSize since the
	internal API changes.
	Retrive thread ID with vmThread with the directions from Guilhem
	Lavaux <guilhem@kaffe.org>.

	* kaffe/kaffevm/jit3/machine.c
	(translate):
	Add casting in subtraction between ncode_end and ncode_start.

	* kaffe/kaffevm/jni/jni-base.c:
	Add JVMPI specific header.

2005-01-14  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/jvmpi/jvmpi_kaffe.c
	(jvmpiFillThreadStart): Updated to follow the new threadData
	structure.

	Reported by Jim Huang <jserv@kaffe.org>

2005-01-14  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/clib/native/Object.c
	(VMThread.wait): Use vmThread and not sleeper to check whether we are
	sleeping.

	Reported by Jim Huang <jserv@kaffe.org>

2005-01-13  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-12  Michael Koch  <konqueror@gmx.de>

	* gnu/java/security/x509/X509Certificate.java
	(parse): Handle val == null case.
	
2005-01-13  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-12  Michael Koch  <konqueror@gmx.de>

	* java/nio/channels/Channels.java
	(newInputStream(ReadableByteChannel)):
	Call VMChannels.newInputStream(ReadableByteChannel).
	(newOutputStream(WritableByteChannel):
	Call VMChannels.newOutputStream(WritableByteChannel).
	(newInputStream(FileChannelImpl)): Removed.
	(newOutputStream(FileChannelImpl)): Likewise.
	* vm/reference/java/nio/channels/VMChannels.java: Nw file.
	* native/jni/java-nio/Makefile.am:
	* native/jni/java-nio/java_nio_channels_Channels.c,
	include/java_nio_channels_Channels.h: Removed.
	* include/Makefile.am: Don't generate java_nio_channels_Channels.h.
	Removed java_nio_channels_Channels.c.
	
2005-01-13  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-12  Michael Koch  <konqueror@gmx.de>
