@@ -1,3 +1,13 @@
+2005-01-15  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
+	2005-01-13  Jeroen Frijters  <jeroen@frijters.net>
+
+	* vm/reference/java/nio/channels/VMChannels.java: Class shouldn't
+	be public.
+	(newInputStream,newOutputStream): No need to be public.
+
 2005-01-14  Jim Huang  <jserv@kaffe.org>
 
 	* include/jvmpi.h:
